Ensured hover box z-index greater than points

--- a/less/charts/line.less
+++ b/less/charts/line.less
@@ -55,6 +55,7 @@
 
 			.hover-box {
 				position: absolute;
+				z-index: 9500000;
 				background: #FFFAD4;
 				font-size: .8em;
 				border-radius: 0.5em;
